# nlp-tasks

./: .gitignore  README.md  pyproject.toml  snippets.py  tln_dicaro_11.py  tln_dicaro_12.md  tln_dicaro_13.py  tln_dicaro_14.py  tln_dicaro_15.py  tln_dicaro_21.py  tln_dicaro_22.py  tln_radicioni_1.ipynb  tln_radicioni_2.ipynb  tln_radicioni_3.ipynb  tln_radicioni_4.ipynb
common/: __init__.py  prettyprint.py  utils.py
data/: Trump-wall.txt  WordSim353.csv  bpd_corpus.txt  damato_semeval.tsv  defs.csv  psy_corpus.txt
results/: ldavis_prepared_7  ldavis_prepared_7.html  manual_annotations.txt  term_similarity.csv
stage-1/: .gitignore  cky.py  test_dothraki.py  test_jurafsky.py  test_semantic_dothraki.py
stage-1/resources/: dothraki_grammar.cfg  dothraki_grammar.fcfg  jurafsky_grammar.cfg  jurafsky_grammar_cnf.cfg
