[tool.poetry]
name = "tln"
version = "0.1.0"
description = ""
authors = ["Eskilop <eskilop@eskilop.it>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
matplotlib = "^3.4.3"
nltk = "^3.6.2"
pandas = "^1.3.2"
sumy = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
